package exercise43.base;

import java.util.List;

public class createFiles {

    public void createWebsite(List<String> webName, List<String> authorName) {
        //creates a website folder with the name of webName
        //then creates an index.html file that has <title> tag and the author in a <meta> tag.
    }

    public void createJS(List<String> webName, List<String> javaScript) {
        //if else function that creates a js file
    }

    public void createCSS(List<String> webName, List<String> css) {
        //if else function that creates a css file
    }
}
